--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
 #list{
-    width:350px;
+    width: 350px;    
 }
 li{
     list-style: none;
+    box-shadow: 3px 3px 5px 1px blue;
 }
 .delete-Botton{
     display: none;
@@ -12,4 +13,19 @@ li{
 }
 li:hover .delete-Botton{
     display:inherit
+}
+.cabecera{
+    font-size: 7rem;
+    margin-bottom: 50px;
+}
+input{
+    border-width: 5px;
+    border-style: double;
+    border-color: black;
+}
+body{
+    background-color:rgb(238, 255, 255)
+}
+#deleteAllTasks:hover{
+    box-shadow: 0px 0px 10px 10px red;
 }
